# llm-spec

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  QUICKREF.md  README.md  TESTING.md  debug_report.py  llm-spec.example.toml  llm-spec.toml  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  test_collector.py
docs/: ARCHITECTURE.md  CONFIG_DRIVEN_TESTING.md  DATAFLOW.md  REPORTING.md  anthropic-expansion-summary.md
docs/anthropic/: README.md  messages-api.yaml  messages-streaming.yaml
docs/gemini/: README.md  gemini-count-tokens.yaml  gemini-embed-content.yaml  gemini-generate-content.yaml  gemini-stream-generate-content.yaml
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
llm_spec/: __init__.py  __main__.py  cli.py  logger.py  types.py
llm_spec/adapters/: anthropic.py  base.py  gemini.py  openai.py  xai.py
llm_spec/client/: base_client.py  http_client.py  logger.py
llm_spec/config/: loader.py
llm_spec/core/: __init__.py  client.py  config.py  exceptions.py  logger.py  registry.py  report.py  validator.py
llm_spec/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  xai.py
llm_spec/reporting/: aggregator.py  anthropic_params.py  api_registry.py  collector.py  formatter.py  openai_params.py  parameter_config.py  report_types.py  run_result_formatter.py  types.py
llm_spec/runners/: __init__.py  base.py  parsers.py  runner.py  schema_registry.py  stream_rules.py
llm_spec/validation/: validator.py
llm_spec/web/: README.md  config.py  db.py  env.example  main.py  mock_adapter.py  models.py  schema.sql  schemas.py  services.py
plans/: task-card-design.md
reports/: openai_chat_completions.json
scripts/: generate_test_assets.py  migrate_suites_to_web.py
suites-registry/: CONTRIBUTING.md  DESIGN.md  README.md
suites-registry/providers/: model.example.toml
suites/anthropic/: messages.json5
suites/gemini/: batch_generate_content.json5  count_tokens.json5  generate_content.json5  stream_generate_content.json5
suites/openai/: audio_speech.json5  audio_transcriptions.json5  audio_translations.json5  chat_completions.json5  embeddings.json5  images_edits.json5  images_generations.json5  responses.json5
suites/xai/: chat_completions.json5
tests/: base.py  conftest.py  test_anthropic.py  test_from_config.py  test_gemini.py  test_openai.py  test_openai_pipeline.py  test_xai.py
tests/anthropic/: test_messages_advanced.py  test_messages_basic.py  test_messages_streaming.py
tests/gemini/: test_batch_generate_content.py  test_count_tokens.py  test_embed_content.py  test_generate_content.py  test_stream_generate_content.py
tests/integration/: conftest.py  mock_loader.py  test_suite_runner.py
tests/openai/: test_audio_speech.py  test_audio_transcriptions.py  test_audio_translations.py  test_chat_completions.py  test_embeddings.py  test_images_edits.py  test_images_generations.py  test_responses.py
tests/runners/: base.py  parsers.py  schema_registry.py
(+200 files in other folders)
