[project]
name = "llm-spec"
version = "0.1.0"
description = "A testing framework to validate LLM API responses against official specifications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "routertokens" }]
keywords = ["llm", "api", "testing", "validation", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "json5>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pyright>=1.1.350",
    "respx>=0.20.0",
]

yaml = ["pyyaml>=6.0.0"]

web = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.30.0",
]

all = [
    "llm-spec[dev,yaml,web]",
]

[project.urls]
Homepage = "https://github.com/r9s-ai/llm-spec"
Repository = "https://github.com/r9s-ai/llm-spec"
Documentation = "https://github.com/r9s-ai/llm-spec#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src/llm_spec", "packages/web-api/src/llm_spec_web"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["llm_spec", "llm_spec_web"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["packages/core/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that require real API keys (deselect with '-m \"not integration\"')",
    "expensive: marks tests that consume significant API credits",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "packages.core.tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["llm_spec", "llm_spec_web"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
